// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hyper.app theme generator should render valid files 1`] = `
"{
  \\"name\\": \\"themer-hyper-dark\\",
  \\"version\\": \\"2.0.3\\",
  \\"description\\": \\"dark theme for Hyper.app, generated by themer\\",
  \\"keywords\\": [
    \\"themer\\",
    \\"dark\\",
    \\"hyper\\"
  ],
  \\"main\\": \\"themer-hyper-dark/index.js\\"
}"
`;

exports[`Hyper.app theme generator should render valid files 2`] = `
"{
  \\"name\\": \\"themer-hyper-light\\",
  \\"version\\": \\"2.0.3\\",
  \\"description\\": \\"light theme for Hyper.app, generated by themer\\",
  \\"keywords\\": [
    \\"themer\\",
    \\"light\\",
    \\"hyper\\"
  ],
  \\"main\\": \\"themer-hyper-light/index.js\\"
}"
`;

exports[`Hyper.app theme generator should render valid files 3`] = `
"
    module.exports.decorateConfig = config => {
      return Object.assign({}, config, {
        cursorColor: 'rgba(204, 120, 250, 0.5)',
        foregroundColor: '#E0DCE0',
        backgroundColor: '#282629',
        borderColor: '#282629',
        colors: {
          black: '#282629',
          red: '#FF4050',
          green: '#A4CC35',
          yellow: '#FFD24A',
          blue: '#66BFFF',
          magenta: '#F553BF',
          cyan: '#26C99E',
          white: '#E0DCE0',
          lightBlack: '#474247',
          lightRed: '#F28144',
          lightGreen: '#A4CC35',
          lightYellow: '#FFD24A',
          lightBlue: '#66BFFF',
          lightMagenta: '#F553BF',
          lightCyan: '#26C99E',
          lightWhite: '#FFFCFF',
        },
      });
    };
  "
`;

exports[`Hyper.app theme generator should render valid files 4`] = `
"
    module.exports.decorateConfig = config => {
      return Object.assign({}, config, {
        cursorColor: 'rgba(191, 101, 240, 0.5)',
        foregroundColor: '#474247',
        backgroundColor: '#FFFCFF',
        borderColor: '#FFFCFF',
        colors: {
          black: '#FFFCFF',
          red: '#F03E4D',
          green: '#97BD2D',
          yellow: '#EEBA21',
          blue: '#53A6E1',
          magenta: '#EE4EB8',
          cyan: '#1FC598',
          white: '#474247',
          lightBlack: '#E0DCE0',
          lightRed: '#F37735',
          lightGreen: '#97BD2D',
          lightYellow: '#EEBA21',
          lightBlue: '#53A6E1',
          lightMagenta: '#EE4EB8',
          lightCyan: '#1FC598',
          lightWhite: '#282629',
        },
      });
    };
  "
`;
